# ecen330

./: CODING_STANDARD.md  connect-esp32.ps1  docker-compose.yml  project_tree_formatted.txt
.devcontainer/: devcontainer.json
audio/: userSound.m4a
audio/c24k_8b/: userSound.c  userSound.h
components/joy/: joy.c
components/lcd/: CMakeLists.txt
components/net/: net.c
components/pin/: CMakeLists.txt  pin.c
components/sound/: CMakeLists.txt
components/tone/: tone.c
lab01/: sdkconfig
lab01/main/: main.c
lab02/main/: CMakeLists.txt
lab03/: sdkconfig
lab03/main/: CMakeLists.txt  main.c
lab04/: sdkconfig
lab05/: sdkconfig
lab05/main/: CMakeLists.txt  com.c  config.h  game.c
tools/: format_tree.py
